--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,21 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: ''
+
+moon_menu:
+  back2top:
+    enable: true
+    icon: fas fa-chevron-up
+    func: back2top
+    order: -1
+  back2bottom:
+    enable: true
+    icon: fas fa-chevron-down
+    func: back2bottom
+    order: -2
